--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -7,11 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
-     <script>
-  window.onload = function() {  // reload file every second
-    setInterval(function() { location.reload(); } , 1000);
-  };
-</script>
 </head>
 <body>
    <div class="wrapper">
@@ -61,7 +56,8 @@
 </main>
     <article><h3>Áhugamál</h3>
 <p>Áhugamálin mín eru meðal annars að hanga með vinum, dýr, píanó, tæknibúnaður, virtual reality og fleira. Einnig er gaman að fara út á skemmtistaði með vinum að t.d. hlusta á rappara syngja eða slíkt, svo höldum við oft spilakvöld allir saman sem við spilum allskonar spil eins og cards against humanity. </p></article>
-    
+    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=qYfNzhLXYGc">
+</iframe>
     <footer>
         <ul>
             <li><a href="">Footer 1</a></li>
