--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -7,13 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script>
+  window.onload = function() {  // reload file every second
+    setInterval(function() { location.reload(); } , 1000);
+  };
+</script>
 </head>
 <body>
    <div class="wrapper">
     <header><h1>Forsíða VEFÞ</h1><img src="drugpugnb.png" alt="Logo"> </header>
     
     <aside><h3>Um Mig</h3>
-<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. ég á hund sem heitir lúlú og hún er pug. ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza
+<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. ég á hund sem heitir lúlú og hún er pug. ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza.
 <img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t1.0-9/37387627_1514255048680228_9084861510517260288_n.jpg?_nc_cat=101&_nc_oc=AQlpeIvLmlMjZ8YqvTjt4RZhJA-FV2lwKBVZUl12MC0SG4oICNS5sEJQFXsF6PRLdTw&_nc_ht=scontent.frkv3-1.fna&oh=c078042e547011e780163f5417c018d8&oe=5E4FF59D
 " alt="Logo"></p>
 <ul>
@@ -53,14 +58,29 @@
             </li>
             <li>
               <a href="innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
+            </li>
+            <h2>Meira Um Áhugamálin Mín og Líf</h2>
+            <p>ég hef mikin áhuga á dýrum og á ég þersvegna hund. Hún heitir lúlú og er 4 ára gömul, tegundin heitir pug og þeir voru sér gerðir fyrir múnka í asíu</p>
+            <img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t31.0-8/13923537_879533355485737_6918198572185701841_o.jpg?_nc_cat=100&_nc_oc=AQkdItOxVj_kxGK8RIlPCTwC2Btwcjbp-oMo2KIjQOCF5dVXIlJlwYQqzfMQMmfJopA&_nc_ht=scontent.frkv3-1.fna&oh=ddbeb7fa469c4780ccaa4aed613a1fef&oe=5E56140B" width="400" height="300" alt="Pug">
+
 </main>
-    <article><h3>Áhugamál</h3>
-<p>Áhugamálin mín eru meðal annars að hanga með vinum, dýr, píanó, tæknibúnaður, virtual reality og fleira. Einnig er gaman að fara út á skemmtistaði með vinum að t.d. hlusta á rappara syngja eða slíkt, svo höldum við oft spilakvöld allir saman sem við spilum allskonar spil eins og cards against humanity. </p></article>
-    <iframe width="420" height="345" src="https://www.youtube.com/watch?v=qYfNzhLXYGc">
-</iframe>
+    <article><h1>Áhugamál</h1>
+<p>Áhugamálin mín eru meðal annars að hanga með vinum, dýr, píanó, tæknibúnaður, virtual reality og fleira. Einnig er gaman að fara út á skemmtistaði með vinum að t.d. hlusta á rappara syngja eða slíkt, svo höldum við oft spilakvöld allir saman sem við spilum allskonar spil eins og cards against humanity. </p>Hérna er gott myndband af eldra fólki að prufa VR í fyrsta skipti og er það mjög fyndið
+<p></p>
+   <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="420" height="315" type="text/html" src="https://www.youtube.com/embed/QvUkcw63bAs?autoplay=0&fs=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"></iframe>
+<p> ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎</p>
+   Hérna er uppáhalds söngvari minn og lagið mitt. Söngvarinn heitir Birnir og lagið heitir Milljón
+<p></p>
+   <audio controls>
+  <source src="Milljón.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+<p></p>
+<p>Ég á heima á akureyri og líka í kópavogi og er núna æikópavogi.</p>
+<div class="mapouter"><div class="gmap_canvas"><iframe width="450" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=%C3%BEingh%C3%B3lsbraut%2069&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/nordvpn-coupon-code/">embedgooglemap.net</a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:450px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:450px;}</style></div></article>
     <footer>
         <ul>
-            <li><a href="">Footer 1</a></li>
+            <li><a href="">Footer 1</a></li>    
             <li><a href="">Footer 2</a></li>
             <li><a href="">Footer 3</a></li>
             <li><a href="">Footer 4</a></li>
