--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -7,13 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script>
+  window.onload = function() {  // reload file every second
+    setInterval(function() { location.reload(); } , 1000);
+  };
+</script>
 </head>
 <body>
    <div class="wrapper">
     <header><h1>Forsíða VEFÞ</h1><img src="drugpugnb.png" alt="Logo"> </header>
     
     <aside><h3>Um Mig</h3>
-<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. ég á hund sem heitir lúlú og hún er pug. ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza.
+<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. Ég á hund sem heitir lúlú og hún er pug. Ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza.
 <img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t1.0-9/37387627_1514255048680228_9084861510517260288_n.jpg?_nc_cat=101&_nc_oc=AQlpeIvLmlMjZ8YqvTjt4RZhJA-FV2lwKBVZUl12MC0SG4oICNS5sEJQFXsF6PRLdTw&_nc_ht=scontent.frkv3-1.fna&oh=c078042e547011e780163f5417c018d8&oe=5E4FF59D
 " alt="Logo"></p>
 <ul>
@@ -71,7 +76,7 @@
 Your browser does not support the audio element.
 </audio>
 <p></p>
-<p>Ég á heima á akureyri og líka í kópavogi og er núna æikópavogi.</p>
+<p>Ég á heima á akureyri og líka í kópavogi og er núna í kópavogi.</p>
 <div class="mapouter"><div class="gmap_canvas"><iframe width="450" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=%C3%BEingh%C3%B3lsbraut%2069&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/nordvpn-coupon-code/">embedgooglemap.net</a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:450px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:450px;}</style></div></article>
     <footer>
         <ul>
