--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script>
+  window.onload = function() {  // reload file every second
+    setInterval(function() { location.reload(); } , 1000);
+  };
+</script>
 </head>
 <body>
    <div class="wrapper">
@@ -49,10 +54,10 @@
               <a href="/verkefni3" title="verkefni 3">Verkefni 3</a>
             </li>
             <li>
-              <a href="index2.html" title="verkefni 4.1">Verkefni 4.1</a>
+              <a href="/verkefni4/index2.html" title="verkefni 4.1">Verkefni 4.1</a>
             </li>
             <li>
-              <a href="innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
+              <a href="/verkefni4/innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
             </li>
             <h2>Meira Um Áhugamálin Mín og Líf</h2>
             <p>ég hef mikin áhuga á dýrum og á ég þersvegna hund. Hún heitir lúlú og er 4 ára gömul, tegundin heitir pug og þeir voru sér gerðir fyrir múnka í asíu</p>
