--- a/verkefni6/index.html
+++ b/verkefni6/index.html
@@ -10,75 +10,33 @@
 </head>
 <body>
    <div class="wrapper">
-    <header><h1>Forsíða VEFÞ</h1><img src="drugpugnb.png" alt="Logo"> </header>
-    
-    <aside><h3>Um Mig</h3>
-<p>Ég heiti Óttar Orri og er 18 ára. Ég á heima í kópavogi og einnig á ég heima á akureyri. Ég á hund sem heitir lúlú og hún er pug. Ég hef verið á þremur brautum í menntaskóla og uppáhalds maturinn minn er pizza.
-<img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t1.0-9/37387627_1514255048680228_9084861510517260288_n.jpg?_nc_cat=101&_nc_oc=AQlpeIvLmlMjZ8YqvTjt4RZhJA-FV2lwKBVZUl12MC0SG4oICNS5sEJQFXsF6PRLdTw&_nc_ht=scontent.frkv3-1.fna&oh=c078042e547011e780163f5417c018d8&oe=5E4FF59D
-" alt="Logo"></p>
-<ul>
-<li>Almennt:</li>
-<li>Íslenska, Enska, Stærðfræði, Náttúrulæsi, Lífsleikni, Heilsa og Lífsstíll</li>
-<li><p></p></li>
-<li>Félagsfræðibraut:</li>
-<li>Félagsfræði og Saga</li>
-<li><p></p></li>
-<li>Grunnám Rafiðna:</li>
-<li>Verktækni grunnáms, Skyndihjálp, Stýringar og rökrásir, Rafmagnsfræði, Raflagnir, Mekatronik</li>
-
-
-
-</ul></aside>
-    <main> <h3>Öll Verkefni</h3>
-        <li>
-            <a href="/verkefni1/verkefni1_4A.html" title="verkefni 1">Verkefni 1</a>
-            </li>
-            <li>
-              <a href="/verkefni2/index.html" title="verkefni 2">Verkefni 2</a>
-            </li>
-            <li>
-              <a href="/verkefni2/Box Model 2-1.html" title="verkefni 2.1">Verkefni 2.1</a>
-            </li>
-            <li>
-              <a href="/verkefni2/Box Model 2-2.html" title="verkefni 2.2">Verkefni 2.2</a>
-            </li>
-            <li>
-              <a href="/verkefni2/Box Model 2-3.html" title="verkefni 2.3">Verkefni 2.3</a>
-            </li>
-             <li>
-              <a href="/verkefni3" title="verkefni 3">Verkefni 3</a>
-            </li>
-            <li>
-              <a href="/verkefni4/index2.html" title="verkefni 4.1">Verkefni 4.1</a>
-            </li>
-            <li>
-              <a href="/verkefni4/innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
-            </li>
-            <h2>Meira Um Áhugamálin Mín og Líf</h2>
-            <p>ég hef mikin áhuga á dýrum og á ég þersvegna hund. Hún heitir lúlú og er 4 ára gömul, tegundin heitir pug og þeir voru sér gerðir fyrir múnka í asíu</p>
-            <img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t31.0-8/13923537_879533355485737_6918198572185701841_o.jpg?_nc_cat=100&_nc_oc=AQkdItOxVj_kxGK8RIlPCTwC2Btwcjbp-oMo2KIjQOCF5dVXIlJlwYQqzfMQMmfJopA&_nc_ht=scontent.frkv3-1.fna&oh=ddbeb7fa469c4780ccaa4aed613a1fef&oe=5E56140B" width="400" height="300" alt="Pug">
-
+    <header><h1>Skipulag vefsíðu með grid</h1><a href="https://getbootstrap.com/docs/4.3/layout/grid/">Grid System</a></header>
+    <nav>
+        <ul>
+            <li><a href="">Tengill 1</a></li>
+            <li><a href="index2.html">Síða 2/ index2</a></li>
+            <li><a href="index3.html">Síða 3/ index3</a></li>
+            <li><a href="index4.html">Síða 4/ index4</a></li>
+            <li><a href=""> Tengill 5</a></li>
+        </ul>
+        </nav>
+    <aside><h3>Pooe Peei Penge</h3>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
+</p></aside>
+    <main> <h3>Lipsum Lorelai</h3>
+Curabitur condimentum porttitor augue at egestas. Sed ipsum magna, placerat vehicula massa eget, aliquam convallis ipsum. Duis eget neque a sapien faucibus rutrum non vitae lorem. Quisque ultricies faucibus auctor. Donec suscipit porttitor eros, a accumsan tortor bibendum molestie. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla ultrices dui at lobortis. Suspendisse tincidunt, libero ut feugiat iaculis, nibh ipsum finibus quam, sed tincidunt neque lectus vel lorem. Phasellus pellentesque arcu ac nisl tristique, quis accumsan nibh aliquet. In sed pretium velit, et vehicula sem. Suspendisse vel magna sed metus luctus interdum ac a velit. Nulla porttitor, lorem at ornare vestibulum, quam ligula cursus massa, non suscipit lectus ante a mauris. Suspendisse tincidunt lectus non erat convallis, at semper nisl sollicitudin. Quisque blandit tempus enim, eu consequat tellus blandit vitae.
+It's a cool <blockquote>Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut nisl quis, tempor auctor mi. Aliquam at risus lacus. Donec commodo efficitur vestibulum. Nam eget turpis enim. Vestibulum vitae ante et mauris pellentesque pulvinar et ac mauris. Phasellus nec sollicitudin tortor, ut egestas ligula. Proin ac orci massa. Quisque at orci tortor.</blockquote> Vivamus sodales eleifend metus vel dignissim. Suspendisse id leo libero. Pellentesque iaculis sagittis nisl, vel malesuada mauris venenatis a. Integer malesuada mauris et orci gravida, ac accumsan purus finibus. Mauris metus nibh, congue a ante non, sollicitudin auctor velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla dictum dictum neque ac vehicula. Sed malesuada libero sed dui vulputate interdum. Fusce eget nibh eget ipsum condimentum porttitor. Maecenas rhoncus tortor ac malesuada sagittis. Fusce ac rutrum tellus. In tincidunt molestie dui, et volutpat arcu fringilla vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </main>
-    <article><h1>Áhugamál</h1>
-<p>Áhugamálin mín eru meðal annars að hanga með vinum, dýr, píanó, tæknibúnaður, virtual reality og fleira. Einnig er gaman að fara út á skemmtistaði með vinum að t.d. hlusta á rappara syngja eða slíkt, svo höldum við oft spilakvöld allir saman sem við spilum allskonar spil eins og cards against humanity. </p>Hérna er gott myndband af eldra fólki að prufa VR í fyrsta skipti og er það mjög fyndið
-<p></p>
-   <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0"width="420" height="315" type="text/html" src="https://www.youtube.com/embed/QvUkcw63bAs?autoplay=0&fs=1&iv_load_policy=3&showinfo=0&rel=0&cc_load_policy=0&start=0&end=0&origin=https://youtubeembedcode.com"></iframe>
-<p> ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎  ‏‏‎</p>
-   Hérna er uppáhalds söngvari minn og lagið mitt. Söngvarinn heitir Birnir og lagið heitir Milljón
-<p></p>
-   <audio controls>
-  <source src="Milljón.mp3" type="audio/mpeg">
-Your browser does not support the audio element.
-</audio>
-<p></p>
-<p>Ég á heima á akureyri og líka í kópavogi og er núna í kópavogi.</p>
-<div class="mapouter"><div class="gmap_canvas"><iframe width="450" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=%C3%BEingh%C3%B3lsbraut%2069&t=k&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/nordvpn-coupon-code/">embedgooglemap.net</a></div><style>.mapouter{position:relative;text-align:right;height:400px;width:450px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:450px;}</style></div></article>
+    <article><h3>Lippsy Dippsy Doppsy</h3>
+<p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
+</p></article>
+    
     <footer>
         <ul>
-            <li><a href="">Footer 1</a></li>    
-            <li><a href="">Footer 2</a></li>
-            <li><a href="">Footer 3</a></li>
-            <li><a href="">Footer 4</a></li>
+            <li><a href="https://fonts.google.com">Google fonts</a></li>
+            <li><a href="https://practicaltypography.com/system-fonts.html"> Kerfisletus - system fonts</a></li>
+            <li><a href="http://litamalun.is/litir-og-litaval.html"> Litaval</a></li>
+            <li><a href="tengill4">2019 OOO</a></li>
         </ul>    
            </footer>
 </div>
