--- a/verkefni5/index.html
+++ b/verkefni5/index.html
@@ -54,6 +54,9 @@
             <li>
               <a href="/verkefni4/innerlinks.html" title="verkefni 4.2">Verkefni 4.2</a>
             </li>
+            <li>
+              <a href="/verkefni6/index.html" title="verkefni 6.1">Verkefni 6.1</a>
+            </li>
             <h2>Meira Um Áhugamálin Mín og Líf</h2>
             <p>ég hef mikin áhuga á dýrum og á ég þersvegna hund. Hún heitir lúlú og er 4 ára gömul, tegundin heitir pug og þeir voru sér gerðir fyrir múnka í asíu</p>
             <img src="https://scontent.frkv3-1.fna.fbcdn.net/v/t31.0-8/13923537_879533355485737_6918198572185701841_o.jpg?_nc_cat=100&_nc_oc=AQkdItOxVj_kxGK8RIlPCTwC2Btwcjbp-oMo2KIjQOCF5dVXIlJlwYQqzfMQMmfJopA&_nc_ht=scontent.frkv3-1.fna&oh=ddbeb7fa469c4780ccaa4aed613a1fef&oe=5E56140B" width="400" height="300" alt="Pug">
