--- a/verkefni6/index.html
+++ b/verkefni6/index.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <li><a href="">Tengill 1</a></li>
-            <li><a href="/aefing-nemar/index.html">aefing-nemar-verkefni/ aefingar-nemar-verkefni</a></li>
+            <li><a href="/aefing-nemar/index.html">aefing-nemar-verkefni</a></li>
             <li><a href="index3.html">Síða 3/ index3</a></li>
             <li><a href="index4.html">Síða 4/ index4</a></li>
             <li><a href=""> Tengill 5</a></li>
