--- a/verkefni6/aefing-nemar/myndir.html
+++ b/verkefni6/aefing-nemar/myndir.html
@@ -5,8 +5,7 @@
 	<meta charset="utf-8">
 	<meta author="Guðmundur">
 	<title>Verkefni 2</title>
-	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles3test.css">
 </head>
 <body> 
     <nav class="topnav">
@@ -21,13 +20,13 @@
 		<h1>Sveigjanleg hönnun - <i>Myndanotkun</i></h1>
 		<img src="img/rose-960.jpg" alt="Roses">
 	</header>
-	<section class="content">
+	<section class="main">
 		<article class="midja">
 			<h2>Aðaldálkur</h2>
 			<p>Responsive Web Design makes your web page look good on all devices (desktops, tablets, and phones). Responsive Web Design is about using CSS and HTML to resize, hide, shrink, enlarge, or move the content to make it look good on any screen. </p>
 			<section class="myndabox">
 		      	<figure>
-		      		<img src="img/mynd-1.jpg" alt="myndatexti">
+					  <img src="img/mynd-1.jpg" alt="myndatexti">
 		      		<!--figcaption>myndatexti í figcaption virkar eins og alt eigindið</figcaption-->
 		      	</figure>
 		    	<figure><img src="img/mynd-2.jpg"></figure>
