--- a/verkefni6/index.html
+++ b/verkefni6/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="">Tengill 1</a></li>
             <li><a href="aefing-nemar/index.html">aefing-nemar-verkefni</a></li>
-            <li><a href="">Tengill 3</a></li>
+            <li><a href="aefing-nemar/myndir.html">aefing-nemar-Myndvinnsla</a></li>
             <li><a href="">Tengill 4</a></li>
             <li><a href=""> Tengill 5</a></li>
         </ul>
