--- a/verkefni6/aefing-nemar/myndir.html
+++ b/verkefni6/aefing-nemar/myndir.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta author="Guðmundur">
 	<title>Verkefni 2</title>
-	<link rel="stylesheet" type="text/css" href="styles3test.css">
+	<link rel="stylesheet" type="text/css" href="css/styles3test.css">
 </head>
 <body> 
     <nav class="topnav">
