--- a/lokaverkefni7/index.html
+++ b/lokaverkefni7/index.html
@@ -11,6 +11,10 @@
 <body>
 
     <div class="container">
+
+
+<!-- MAIN SÍÐAN / INDEX -->
+
         <div class="section">
    <div class="wrapper">
     <header><h1>Dead By Daylight</h1></header>
@@ -27,10 +31,12 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </p></aside>
     <main> <h3>Lipsum Lorelai</h3>
+<div class="maintexti">
 Curabitur condimentum porttitor augue at egestas. Sed ipsum magna, placerat vehicula massa eget, aliquam convallis ipsum. Duis eget neque a sapien faucibus rutrum non vitae lorem. Quisque ultricies faucibus auctor. Donec suscipit porttitor eros, a accumsan tortor bibendum molestie. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla ultrices dui at lobortis. Suspendisse tincidunt, libero ut feugiat iaculis, nibh ipsum finibus quam, sed tincidunt neque lectus vel lorem. Phasellus pellentesque arcu ac nisl tristique, quis accumsan nibh aliquet. In sed pretium velit, et vehicula sem. Suspendisse vel magna sed metus luctus interdum ac a velit. Nulla porttitor, lorem at ornare vestibulum, quam ligula cursus massa, non suscipit lectus ante a mauris. Suspendisse tincidunt lectus non erat convallis, at semper nisl sollicitudin. Quisque blandit tempus enim, eu consequat tellus blandit vitae.
 It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut nisl quis, tempor auctor mi. Aliquam at risus lacus. Donec commodo efficitur vestibulum. Nam eget turpis enim. Vestibulum vitae ante et mauris pellentesque pulvinar et ac mauris. Phasellus nec sollicitudin tortor, ut egestas ligula. Proin ac orci massa. Quisque at orci tortor. Vivamus sodales eleifend metus vel dignissim. Suspendisse id leo libero. Pellentesque iaculis sagittis nisl, vel malesuada mauris venenatis a. Integer malesuada mauris et orci gravida, ac accumsan purus finibus. Mauris metus nibh, congue a ante non, sollicitudin auctor velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla dictum dictum neque ac vehicula. Sed malesuada libero sed dui vulputate interdum. Fusce eget nibh eget ipsum condimentum porttitor. Maecenas rhoncus tortor ac malesuada sagittis. Fusce ac rutrum tellus. In tincidunt molestie dui, et volutpat arcu fringilla vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
+</div>
 </main>
-    <article><h3>Lippsy Dippsy Doppsy</h3>
+    <article>
 <p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </p></article>
     
@@ -38,23 +44,31 @@ It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut n
     </footer>
 </div>
 </div>
+
+
+
+
+
+
+<!-- SÍÐA 2 / ABOUT -->
+
+
+
         <div class="section">   <div class="wrapper">
-    <header><h1>About</h1></header>
+    <header><h1>Upplýsingar um leikinn</h1></header>
     <nav></nav>
-    <aside><h3>Pooe Peei Penge</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
-</p></aside>
-    <main> <h3>Lipsum Lorelai</h3>
-Curabitur condimentum porttitor augue at egestas. Sed ipsum magna, placerat vehicula massa eget, aliquam convallis ipsum. Duis eget neque a sapien faucibus rutrum non vitae lorem. Quisque ultricies faucibus auctor. Donec suscipit porttitor eros, a accumsan tortor bibendum molestie. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse fringilla ultrices dui at lobortis. Suspendisse tincidunt, libero ut feugiat iaculis, nibh ipsum finibus quam, sed tincidunt neque lectus vel lorem. Phasellus pellentesque arcu ac nisl tristique, quis accumsan nibh aliquet. In sed pretium velit, et vehicula sem. Suspendisse vel magna sed metus luctus interdum ac a velit. Nulla porttitor, lorem at ornare vestibulum, quam ligula cursus massa, non suscipit lectus ante a mauris. Suspendisse tincidunt lectus non erat convallis, at semper nisl sollicitudin. Quisque blandit tempus enim, eu consequat tellus blandit vitae.
-It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut nisl quis, tempor auctor mi. Aliquam at risus lacus. Donec commodo efficitur vestibulum. Nam eget turpis enim. Vestibulum vitae ante et mauris pellentesque pulvinar et ac mauris. Phasellus nec sollicitudin tortor, ut egestas ligula. Proin ac orci massa. Quisque at orci tortor. Vivamus sodales eleifend metus vel dignissim. Suspendisse id leo libero. Pellentesque iaculis sagittis nisl, vel malesuada mauris venenatis a. Integer malesuada mauris et orci gravida, ac accumsan purus finibus. Mauris metus nibh, congue a ante non, sollicitudin auctor velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla dictum dictum neque ac vehicula. Sed malesuada libero sed dui vulputate interdum. Fusce eget nibh eget ipsum condimentum porttitor. Maecenas rhoncus tortor ac malesuada sagittis. Fusce ac rutrum tellus. In tincidunt molestie dui, et volutpat arcu fringilla vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
-</main>
-    <article><h3>Lippsy Dippsy Doppsy</h3>
-<p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
-</p></article>
+
+    <main> <h3>‎‎‎‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎</h3>
+<div class="maintexti2">
+Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behaviour Interactive sem eru leikjahönnuðir.
+</main></div>
+<aside><div class="Behaviour_Interactive_logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Behaviour_Interactive_logo.svg/1200px-Behaviour_Interactive_logo.svg.png" alt="Behaviour_Interactive_logo" width="250" height="250"></div></aside>
     
     <footer>
     </footer>
 </div></div>
+
+<!-- SÍÐA 3 / -->
         <div class="section"></div>
         <div class="section"></div>
         <div class="section"></div>
