--- a/lokaverkefni7/index.html
+++ b/lokaverkefni7/index.html
@@ -36,7 +36,7 @@ Curabitur condimentum porttitor augue at egestas. Sed ipsum magna, placerat vehi
 It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut nisl quis, tempor auctor mi. Aliquam at risus lacus. Donec commodo efficitur vestibulum. Nam eget turpis enim. Vestibulum vitae ante et mauris pellentesque pulvinar et ac mauris. Phasellus nec sollicitudin tortor, ut egestas ligula. Proin ac orci massa. Quisque at orci tortor. Vivamus sodales eleifend metus vel dignissim. Suspendisse id leo libero. Pellentesque iaculis sagittis nisl, vel malesuada mauris venenatis a. Integer malesuada mauris et orci gravida, ac accumsan purus finibus. Mauris metus nibh, congue a ante non, sollicitudin auctor velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla dictum dictum neque ac vehicula. Sed malesuada libero sed dui vulputate interdum. Fusce eget nibh eget ipsum condimentum porttitor. Maecenas rhoncus tortor ac malesuada sagittis. Fusce ac rutrum tellus. In tincidunt molestie dui, et volutpat arcu fringilla vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </div>
 </main>
-    <article>
+    <article><h3>Lippsy Dippsy Doppsy</h3>
 <p>-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed congue ex, ac ullamcorper eros. Vivamus vitae enim at mi aliquam mattis vel in felis. Nunc auctor, metus nec porta faucibus, nulla arcu vehicula dui, ac finibus purus sapien a libero. Suspendisse vitae elit in lorem ornare commodo ut nec augue. Sed justo erat, feugiat ut tempor sed, aliquam non nulla. Ut lobortis finibus est sit amet sollicitudin. Suspendisse potenti. Sed sed varius magna. Nulla porttitor mi ante, eu efficitur dui convallis semper. Sed vel fringilla mauris, et interdum urna. Vestibulum non quam sit amet felis gravida gravida nec ut sapien. Integer et nulla neque. Fusce posuere dolor ipsum, a pretium turpis volutpat quis.
 </p></article>
     
@@ -47,9 +47,6 @@ It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut n
 
 
 
-
-
-
 <!-- SÍÐA 2 / ABOUT -->
 
 
@@ -57,12 +54,13 @@ It's a cool. Quisque efficitur finibus pretium. Fusce purus lacus, faucibus ut n
         <div class="section">   <div class="wrapper">
     <header><h1>Upplýsingar um leikinn</h1></header>
     <nav></nav>
+    <aside><h3>Pooe Peei Penge</h3>
+<p>Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behavour Interactive sem eru leikjahönnuðir.
+</p></aside>
+    <main> <h3>Lipsum Lorelai</h3>
+Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behavour Interactive sem eru leikjahönnuðir.
+</main>
 
-    <main> <h3>‎‎‎‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎‏‏‎ ‎</h3>
-<div class="maintexti2">
-Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behaviour Interactive sem eru leikjahönnuðir.
-</main></div>
-<aside><div class="Behaviour_Interactive_logo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e2/Behaviour_Interactive_logo.svg/1200px-Behaviour_Interactive_logo.svg.png" alt="Behaviour_Interactive_logo" width="250" height="250"></div></aside>
     
     <footer>
     </footer>
