--- a/lokaverkefni7/index.html
+++ b/lokaverkefni7/index.html
@@ -37,7 +37,7 @@
                 
                 <main class="transbox"> <h1 class="aboutfont">Um Dead By Daylight</h1>
             <div class="maintexti">
-            Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behaviour Interactive sem eru leikjahönnuðir. Svo var gefinn út á Playstation 4 og xbox ári seinna (2017)
+            Dead by Daylight er hrillingsleikur sem kom út árið 2016 frá Behaviour Interactive sem eru leikjahönnuðir. Svo var hann gefinn út á Playstation 4 og xbox ári seinna (2017)
 og gefinn út á Nitendo Switch þetta ár þannig hann er vel þekktur sama hvar þú spilar. Leikurinn er online og eru tvö lið eitt lið hefur aðeins einn aðila sem er morðingi og kallast killer og hitt liðið eru fjórar manneskjur sem kallast survivor.
 Þeir eiga að reyna lifa af og komast út úr svæðinu sem morðinginn er á áður en að morðinginn drepur allar manneskjurnar og fórnar þeim til guðinn sinn sem er kallað The Entity. Þegar þú spilar getur þú valið milli hvort þú villt spila sem morðinginn eða
 sem survivor.
